--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -11,22 +11,22 @@
         font-family: "Iceland";
     }
     .projects {
-        @apply text-7xl;
+        @apply text-4xl lg:text-7xl;
     }
     .project__title {
-        @apply text-4xl;
+        @apply text-2xl lg:text-4xl;
     }
     .details h4 {
-        @apply text-2xl;
+        @apply text-lg lg:text-2xl;
     }
     .project__img img {
         @apply w-[500px] rounded-2xl;
     }
     .btn {
-        @apply space-x-4 py-4;
+        @apply space-x-0 lg:space-x-4  py-4;
     }
     .btn-g {
-        @apply border-2 border-black px-6 py-1 rounded hover:bg-black hover:text-white shadow-lg;
+        @apply border-2 border-black px-6 py-1 rounded hover:bg-black hover:text-white shadow-lg mb-4;
     }
     .btn-l {
         @apply border-2 border-black px-6 py-1 rounded hover:bg-black hover:text-white shadow-lg;
