--- a/src/components/Home/Hero/Hero.css
+++ b/src/components/Home/Hero/Hero.css
@@ -12,8 +12,17 @@
     }
     .name {
         @apply text-4xl lg:text-7xl;
+        text-shadow: 0px 0px 20px #00ffae;
     }
     .designation {
-        @apply text-2xl lg:text-3xl;
+        @apply text-2xl lg:text-3xl tracking-widest;
+        text-shadow: 0px 0px 30px #00ffae;
+    }
+    .block {
+        position: absolute;
+        width: 50px;
+        height: 100px;
+        background: #235d46;
+        box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.5);
     }
 }
