--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 @tailwind utilities;
 
 body {
+    position: relative;
+    background-color: #06312c;
+
+    color: white;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
@@ -17,4 +21,25 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
+}
+.container {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+.block {
+    position: absolute;
+    width: 50px;
+    height: 100px;
+    background: #0a4e38;
+    box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.2);
+}
+
+#root {
+    position: relative;
+    z-index: 100000;
 }
